--- a/LatticeOptics/submission_rev_sci_inst/latticeoptics.tex
+++ b/LatticeOptics/submission_rev_sci_inst/latticeoptics.tex
@@ -1,4 +1,4 @@
-\documentclass[twocolumn,aps,pra,preprintnumbers,bibnotes]{revtex4-1}
+\documentclass[twocolumn,aip,rsi,reprint,bibnotes]{revtex4-1}
 
 \usepackage[T1]{fontenc}
 
@@ -55,14 +55,14 @@ In addition to the intensity stability, we demonstrate a short-term (shot-to-sho
 \end{figure}
 
 The architecture of the system, shown in Fig.~\ref{fig:high_level}, is based on a single low-power, low-noise seed laser that supplies light to an array of four high-power fiber amplifiers (one for a transport beam~\cite{Huber2014}, and one each for the $X,Y,Z$ lattices~\cite{Blatt2015,Parsons2016}).
-These amplifiers generate sufficient light to perform site resolved imaging~\cite{Parsons2015}, but also substantially increase the level of intensity and pointing noise.
+These amplifiers generate sufficient light to perform site-resolved imaging~\cite{Parsons2015}, but also substantially increase the level of intensity and pointing noise.
 The fiber amplifier output is controlled by two feedback loops, which stabilize the light in low power and high power regimes, respectively, as discussed later.
 After intensity stabilization, the laser beam is mode-shaped to a desired waist.
 The optical system is engineered to be passively stable in terms of pointing, but the position and phase of the optical lattice are monitored in real time and beam pointing can be controlled with remotely actuated mirrors.
 
-In the following we give an in-depth technical description of the optical lattice setup we developed. We start with the laser system itself which includes the seed laser, amplification and optical setup for controlling the laser beams. In the next section we provide a detailed description of the two-stage laser power feedback system. In the last two sections we conduct a performance analysis of the short- and long-term stability of the optical lattices produced by this system. 
-Naturally, the laser system presented here is tailored to suit the experiment's specific lattice geometry~\cite{Huber2014} and exact requirements. 
-We expect, however, that both the specific engineering choices and the general design practices detailed in this work will be widely applicable to experimentalists working with performant optical lattices used for a variety of purposes.
+In the following we give an in-depth technical description of the optical lattice setup we developed. We start with the laser system itself which includes the seed laser, amplification and optical setup for controlling the laser beams. In the next section we provide a detailed description of the two-stage laser power feedback system. In the last two sections we conduct a performance analysis of the short- and long-term stability of the optical lattices produced by this system.
+Naturally, the laser system presented here is tailored to suit the experiment's specific lattice geometry~\cite{Huber2014} and exact requirements.
+We expect, however, that both the specific engineering choices and the general design practices detailed in this work will be widely applicable to experimentalists working with low-noise and stable optical lattices used for quantum many-body physics, precision measurement, and quantum engineering.
 
 \section{Laser system}
 \subsection{Seed laser system}
@@ -80,22 +80,22 @@ To avoid interference of the lattice beams, two of the beam paths pass through a
 \end{figure*}
 
 \subsection{Fiber amplifier system}
-Quantum gas microscopy of Li$^6$ requires single site trap frequencies of approximately \unit{1}{MHz}~\cite{Parsons2015} to be in the Lamb-Dicke regime necessary for Raman sideband cooling.
+Quantum gas microscopy of $^6$Li requires single-site trap frequencies of approximately \unit{1}{MHz} to be in the Lamb-Dicke regime necessary for Raman sideband cooling~\cite{Parsons2015}.
 
 Such trap frequencies may only be attained using tightly focused, high-power beams.
-In practical terms, this requires approximately \unit{20}{W} per lattice axis for a beam waist of around $80 \mu\mathrm{m}$ and the four-fold enhancement in optical depth provided by the reflection from the superpolished substrate~\cite{Huber2014}. We achieve such high laser powers using Yb-doped fiber amplifiers (Nufern NuAmp SUB1174-34).
+In practical terms, this requires approximately \unit{20}{W} per lattice axis for a beam waist of around \unit{80}{\mu m} and the four-fold enhancement in lattice depth provided by the reflection from the superpolished substrate~\cite{Huber2014}. We achieve such high laser powers using Yb-doped fiber amplifiers (Nufern NuAmp SUB1174-34).
 These amplifiers can amplify \unit{150}{mW} of seed light to up to approximately \unit{45}{W}. They use a length of doped fiber pumped with \unit{808}{nm} light from fiber coupled diode sources to amplify the \unit{1064}{nm} seed light.
 The amplification is performed using a two-stage design, where the stages are controlled and powered using separate power supplies and electronics.
 
 The NuAmp suffers from several technical problems.
 It is controlled via a USB interface, which complicates communications with an array of these devices.
-Worse yet, the digital control system is suspected of causing ground loops that add noise and interference to the analog systems.
+Worse yet, the digital control system causes ground loops that add noise and interference to the analog systems.
 This added noise can be seen in Fig.~\ref{fig:noises}, where the fiber-amplified light exhibits many more spurs in the intensity noise spectrum than the seed laser, particularly near \unit{10}{kHz}.
 We solve this problem by replacing the USB control board with a custom-designed solution that is compatible with our laboratory control system and engineered to avoid ground loops.
 
 
 Further sources of technical noise arise from the design of the amplifier. There are two power supplies in the fiber amplifier: (1) a general purpose power supply for the control electronics and the first, low-power amplification stage and (2) a high-power supply for the second, high-power stage.
-Despite the presence of a water-cooled cold-plate for the gain fiber and pump diodes, the high power supply is air cooled by an internal fan with variable frequency.
+Despite the presence of a water-cooled cold-plate for the gain fiber and pump diodes, the high power supply is air-cooled by an internal fan with variable frequency.
 This fan adds noise at acoustic frequencies and degrades pointing stability by increasing vibration of the output fiber tip.
 To reduce acoustic coupling and reduce switching power supply noise, both power supplies were removed from the fiber amplifier chassis, and the low-power supply was replaced by a linear power supply (Acopian A24MT350M).
 Further, a high current low-pass filter (MPE DS26387) was added to the high-power supply (Lumina LDD-600-60-10-5VP/M).
@@ -144,15 +144,15 @@ The free-space propagation of the fiber amplifier output presents several techni
 
 To address these challenges, we use a carefully engineered optical system shown in Fig.~\ref{fig:optical_layout}.
 This system collimates and polarizes the beam, controls its intensity and ensures good pointing stability.
-Due to the high laser power, fused silica glass and IBS coatings are used wherever possible.
+Due to the high laser power, fused silica glass and ion-beam-sputtered (IBS) coatings are used wherever possible.
 Since reflections pose a danger to the users and equipment, all undesired beams above \unit{100}{mW} are directed to water cooled beam-dumps (to prevent temperature gradients on the table) placed as far as practical from critical beam paths.
 Weaker beams are dumped on uncooled diffusive beam catchers.
 
 The large-diameter fiber tip at the output of the fiber amplifier is mounted in a monolithic mount made from copper.
 The beam is collimated using an $f=\unit{20}{mm}$ fused-silica, air-spaced triplet collimator (Opto-Sigma HFTLSQ-15-20PF1) angled with respect to and centered on the angle-cleaved fiber tip.
-The polarization is set using an IBS coated thin-film plate polarizer (Precision photonics PO1056-FY), with the added benefit of rejecting the undesired cladding modes of the fiber, which carry about \unit{1}{W} of light. A thin-film polarizer was used to minimize the number of normal and backreflecting surfaces near the output of the fiber in addition to providing excellent polarization performance.
+The polarization is set using an IBS-coated thin-film plate polarizer (Precision photonics PO1056-FY), with the added benefit of rejecting the undesired cladding modes of the fiber, which carry about \unit{1}{W} of light. A thin-film polarizer was used to minimize the number of normal and backreflecting surfaces near the output of the fiber in addition to providing excellent polarization performance.
 The fact that the lattice is retro-reflected, combined with the observation that optical isolation falls with applied optical power~\cite{Yoshida1999} means that two stages of optical isolators must be used.
-The optical isolators are based on \unit{5}{mm} aperture Tb$_3$Ga$_5$O$_12$ (TGG) isolators (Thorlabs IO-5-1064-VHP), where we replaced the default polarizers (BK7 Brewster plates) by IBS-coated fused silica plate polarizers.
+The optical isolators are based on \unit{5}{mm} aperture Tb$_3$Ga$_5$O$_{12}$ (TGG) isolators (Thorlabs IO-5-1064-VHP), where we replaced the default polarizers (BK7 Brewster plates) by IBS-coated fused silica plate polarizers.
 The isolators are located approximately \unit{1}{m} away from the ultracold atoms which are susceptible to stray magnetic fields.
 To overcome this problem the isolators are enclosed in mu-metal shielding.
 Actuation of the power is performed after the optical isolators, such that the full fiber amplifier output continuously passes through them, minimizing thermal transients during the experimental sequence.
@@ -194,7 +194,7 @@ This contrast can be reduced by varying $\theta$, to the limiting case where $\t
   \end{center}
 \end{figure}
 A key point, as seen in Fig.~\ref{fig:berek}, is that if the waveplates are rotated together, the maximum transmitted power is fixed, while the minimum can be raised.
-The waveplates are detuned such that the maximum power needed in \emph{interaction} mode is the minimum power transmitted by the Berek compensator system, strongly suppressing fluctuations due to angle positioning noise of the Berek compensator, since the slope of transmission with respect to the Berek angle is $0$ at this point.
+The waveplates are detuned such that the maximum power needed in \emph{interaction} mode is the minimum power transmitted by the Berek compensator system, strongly suppressing fluctuations due to angle positioning noise of the Berek compensator, since the slope of transmission with respect to the Berek angle vanishes at this point.
 Naturally, rotation of a parallel plate in the beam path induces a shift of the beam, but this is acceptable because the Berek compensator is only active during the imaging phase of the experiment, when the position of the underlying harmonic trap is largely irrelevant.
 The spatial phase of the optical lattice is set by the retro-reflector mirror, which does not move, and is not affected by the rotation of the Berek compensator.
 This system functions as the actuator arm of a digital feedback loop, where the power of the beam is measured using a low noise photodiode. This feedback loop regulates the lattice between \unit{1}{W} of optical power and its maximum value (which depends on the amplifier, but is $\approx$\unit{20}{W}).
@@ -204,7 +204,7 @@ Since we never need to rotate the plate outside this range, the position is cons
 
 Because two feedback loops are present in the system (the second one detailed in the next section), care must be taken so that they do not function simultaneously.
 To accomplish this, the low-power loop is always manually railed to its high extreme when the high-power loop is active.
-This is done by shuttering the photodiode and directing the set-point to a high value, which quickly winds up the integrator to its maximum output.
+This is done by closing a mechanical shutter in front of the photodiode and setting the set-point to a high value, which quickly winds up the integrator to its maximum output.
 Conversely, the digital high-power loop is disabled in software when the low-power loop is active.
 
 \subsection{Low-power feedback}
@@ -213,9 +213,9 @@ Even if the loop was noisy, the heating would be entirely compensated by the sim
 
 In contrast, the low-power loop that controls the lattice laser during the \emph{interaction} phase of the experiment is critically important:
 \begin{enumerate}
-  \item Its effect on the RIN can limit the system temperature and set heating rate. This can limit the amount of time available for atom interaction~\cite{Blatt2015}. 
-  \item It needs to avoid varying the the beam pointing because the trap position matters during this phase of the experiment.
-  \item It must have closed-loop bandwidths of $\geq\unit{1}{kHz}$, and open-loop modulation bandwidths $\geq \unit{100}{kHz}$.
+  \item Its effect on the RIN can limit the system temperature and dominate heating rates, limiting the amount of time available for atom interaction~\cite{Blatt2015}.
+  \item It needs to avoid varying the beam pointing because the trap position matters during this phase of the experiment.
+  \item It must have closed-loop bandwidths $\geq\unit{1}{kHz}$, and open-loop modulation bandwidths $\geq \unit{100}{kHz}$.
 \end{enumerate}
 To this end, we use an all-custom loop based on a TeO$_2$ AOM (Gooch \& Housego AOMO 3080-198), where the power of the RF supplied to the AOM is used to actuate the fast, low-power feedback loop.
 The AOM was chosen for its low thermal lensing and easily-accessible RF powers.
@@ -239,11 +239,8 @@ Let us now consider every part of this signal chain individually.
 
 \subsubsection{Phase-locked loop (PLL)}
 The local oscillator (LO) RF source is a custom-built printed circuit board (PCB), schematically shown in Fig.~\ref{fig:circuits}(b), that implements a phase locked loop (PLL) based on the ADF4002 IC and a low-phase-noise voltage-controlled oscillator (VCO, Crystek CVCO55CL-0060-0110), preamplified with a low-noise amplifier (Minicircuits PSA4-5043+).
-%To ensure frequency stability (which translates directly into beam pointing of the laser), the PLL is locked to the \unit{10}{MHz} frequency reference distributed around the lab.
-The PLL is locked to the \unit{10}{MHz} frequency reference distributed around the lab to ensure absolute frequency stability.
+The PLL is locked to the \unit{10}{MHz} frequency reference distributed throughout the lab to ensure absolute frequency stability.
 In addition to PLL functionality, the board also contains two digitally-controlled, high-isolation RF switches, giving a total isolation exceeding \unit{90}{dB}.
-
-%We need to maintain the relatively low phase-noise characteristics of the VCO to prevent phase- to amplitude-noise conversion in the AOM, which partially downconverts the VCO phase noise to RIN at acoustic frequencies.
 This device allows us to drive the AOM with a single, clean tone.
 The spectrum and relative intensity noise of the PLL can be found in Fig.~\ref{fig:pll}.
 Vitally, the spectrum of the PLL exhibits phase noise comparable to that of a typical VCO but without the slow frequency drift characteristic to these devices.
@@ -301,7 +298,7 @@ This transient noise is mitigated by two factors: (1) it is only present when th
 \subsubsection{Loop filter}
 
 The connection between the actuation and monitoring mechanisms of the feedback system is the loop filter, which compares the \emph{set-point} signal, $V_\mathrm{SP}(t)$, supplied by the experimental control system and the photodiode signals $V_\mathrm{PD}(t)$, to adjust the actuation accordingly.
-We use a simple, primarily integrating design in three stages, as seen in Fig.~\ref{fig:circuits}(c), based on a low-noise op-amp (Texas Instruments OPA211).
+We use a simple integrating design in three stages, as seen in Fig.~\ref{fig:circuits}(c), based on a low-noise op-amp (Texas Instruments OPA211).
 The first stage computes and amplifies an error signal, $e(t)=V_\mathrm{SP}(t)-V_\mathrm{PD}(t)$, which is integrated by the second stage.
 The integral gain is set using a low-drift trim-pot.
 This is the case because within relevant frequency ranges, the AOM can be coarsely approximated by a pure time delay process, given by the acoustic wave transit time of $\approx$\unit{1}{\mu{}s} across the active region of the AOM crystal.
@@ -309,13 +306,13 @@ In this scenario, the proportional term must be small to avoid instability at th
 For debugging purposes, the loop filter features buffered photodiode monitor and error signal monitor outputs.
 
 The third stage of the loop filter is used to accommodate the fact that the actuation arm is nonlinear: the optical power transmitted by the AOM is proportional to the RF power incident on it $P_{\mathrm{rf}}\propto V_{IF}^2$, where $V_{IF}$ is the actuation signal supplied to the IF port of the mixer.
-In effect, if the rest of the feedback system was linear, this would correspond to a quadratically increasing gain until the AOM is saturated, which could lead to slow behavior at low signal levels and ringing at higher signal levels.
+In effect, if the rest of the feedback system was linear, this would correspond to a quadratically increasing gain until the AOM is saturated, which leads to slow behavior at low signal levels and ringing at higher signal levels.
 Even worse, since the mixer is insensitive to the sign of the voltage applied, the gain is negative for negative voltages, resulting in an unstable system.
 
 To achieve the desired functionality, the final op-amp stage linearizes the response by increasing the gain at low signal levels and suppressing it at high signal levels by including a fast Schottky diode (ON Semiconductor BAT54S) in the feedback arm.
 This can be seen by considering two extreme cases: far below the diode drop, the diode is an open circuit and the gain is set by $R_l$; above the diode drop it is a closed circuit where the gain is set by the resistor $R_h$.
 Naturally, the voltage drop across the diode is chosen such that it is approximately half the maximum desired signal level of the photodiode (\unit{3.3}{V}).
-Although a large improvement, the bandwidth still varies over the dynamic range of the loop, but only by approximately a factor of two, as seen in Fig.~\ref{fig:bandwidth}. 
+Although a large improvement, the bandwidth still varies over the dynamic range of the loop, but only by approximately a factor of two, as seen in Fig.~\ref{fig:bandwidth}.
 Were it not for the linearization, the gain of the mixer would change by a factor of 10 over a dynamic range spanning two orders of magnitude.
 The loop transfer function is sensitive to the specific tuning parameters of the nonlinear controller resulting in slightly different transfer functions for the two axes, although both exhibit approximately constant behavior over the desired range of setpoints.
 Another function of the last stage is to clamp the voltage to be strictly positive by including a diode clamp on the output to prevent unstable positive feedback behavior~\cite{Horowitz2015}.
@@ -336,7 +333,7 @@ Finally, since the mixer is a current driven device, the last stage of the feedb
 \end{figure*}
 
 A common undesired behavior of analog feedback systems with integral gain is \emph{integrator wind-up}~\cite{Bechhoefer2005}, which can occur when the feedback loop is manually broken, meaning that the actuator can no longer adjust the state of the controlled parameter.
-In this regime, the integrator accumulates a large positive or negative voltage, such that when the loop is mended, the system appears to briefly rail before control is restored.
+In this regime, the integrator accumulates a large positive or negative voltage, such that when the loop is mended, the system briefly rails before control is restored.
 In our case, \emph{integrator wind-up} occurs when the high-isolation RF switch is open during the state preparation procedure, and closed when the optical lattice is desired.
 In most cases, the optical lattice must be turned on adiabatically, to avoid heating the trapped atoms due to fast transients resulting from integrator windup.
 To solve this issue, a bypass switch (Maxim MAX4503) is placed across the capacitor of the second stage of the feedback circuit, which siphons off the charge when the lattice is inactive.
@@ -348,7 +345,7 @@ However, a small amount of tuning can increase the bandwidth up to $\approx$\uni
 Although fast, closed-loop control is not available in the current configuration, the last stage of the loop filter features an adder connected to an optional ``feed-forward'' port.
 This port can be used to modulate the RF power at frequencies above the bandwidth.
 
-Although it is an essential part of the system, the loop filter is also one of its major limitations. Figure~\ref{fig:noises} shows the noise performance of the output of the fiber amplifiers in open-loop compared to the noise in closed-loop. 
+Although it is an essential part of the system, the loop filter is also one of its major limitations. Figure~\ref{fig:noises} shows the noise performance of the output of the fiber amplifiers in open-loop compared to the noise in closed-loop.
 Noise near DC is lowered (as expected from a closed-loop system), noise outside the loop bandwidth is increased in the range of 10 to \unit{450}{kHz} as seen in subfigures (c) and (d).
 This can be explained by the Johnson noise~\cite{Horowitz2015} on the \unit{1}{k\Omega} input resistors, amplified by the amplification stages of the loop filter.
 The sharp drop off at the \unit{450}{kHz} point is due to a low-pass filter placed on the output of the loop filter, far above the maximum bandwidth set by the AOM.
@@ -365,7 +362,7 @@ To prevent unwanted interference, the lattice beams enter the glass cell at an a
 Unfortunately, due to the angle of incidence, the beam contains both $S$ and $P$ polarizations, which are reflected differently at the glass cell wall, thus altering the polarization state of the beam.
 Even worse, this happens on both the initial and retro-reflected pass through the glass cell.
 For this reason, we use a combination of quarter waveplate (QWP) and half waveplate (HWP) to optimize the interference contrast of each lattice axis.
-This is done by optimizing the on-site trap frequency of lattice, measured using lattice-modulation spectroscopy.
+This is done by optimizing the on-site trap frequency of lattice, measured using lattice-modulation spectroscopy~\cite{Blatt2015}.
 
 \section{Beam monitoring and alignment}
 Improved spatial resolution and control have given experimentalists the ability to use relatively few atoms~\cite{Preiss2015, Choi2016, Mazurenko2017} that are simultaneously addressed by multiple beams and held by multiple traps.
@@ -374,7 +371,7 @@ Such experiments place stringent bounds on the required beam pointing stability.
 Several applications require the positions of lattice sites to not change by more than a small fraction ($\approx 10\%$ of the lattice constant) between experimental shots.
 In our setup this is ensured by careful design of the optical assembly, where the phase of the retro-reflected lattice is set by the retro-reflecting mirror, which is placed approximately \unit{5}{cm} from the atoms~\cite{Huber2014}.
 This phase determines the location of the sites of the optical lattice.
-We have characterized the phase stability of the optical lattice by recording a long sequence of densely populated images with our imaging camera. We found that the phase varies by much less than one lattice site over the course of hours, as seen in Fig.~\ref{fig:averaged_mott}. 
+We have characterized the phase stability of the optical lattice by recording a long sequence of densely populated images with our imaging camera. We found that the phase varies by much less than one lattice site over the course of hours, as seen in Fig.~\ref{fig:averaged_mott}.
 
 \begin{figure*}
   \begin{center}
@@ -384,7 +381,7 @@ We have characterized the phase stability of the optical lattice by recording a 
 \end{figure*}
 
 
-The position of the atomic cloud, however, is not determined by the phase difference of the retro-reflecting lattice beam, but by the underlying harmonic confinement.
+The position of the atomic cloud, however, is not determined by the phase difference of the retro-reflecting lattice beams, but by the underlying harmonic confinement generated by their transverse Gaussian profiles.
 The stability of this confinement is governed by the pointing stability of the optical lattice laser beams.
 In experiments where the entire cloud is addressed by beams auxiliary to the lattice, which can be used for example for enhanced entropy redistribution~\cite{Mazurenko2017}, reducing drifts and fluctuations of the lattice position is important.
 
@@ -447,7 +444,7 @@ To test this procedure, we analyze the data set of monitoring-camera measurement
 We try to predict the larger blocks, by analyzing the smaller blocks to derive the updates to the affine transform.
 The results are shown in Fig.~\ref{fig:stability}(d-f) and display a large degree of tracking between the predicted and measured atom positions.
 The average taxicab distance between the predicted position and the measured position is 0.7~lattice sites.
-This result shows that recalibrating the affine transformation every 20 shots bounds the tracking error to an acceptable level. In practical applications, larger blocks of shots containing scientific measurements are interleaved with small recalibration blocks. 
+This result shows that recalibrating the affine transformation every 20 shots bounds the tracking error to an acceptable level. In practical applications, larger blocks of shots containing scientific measurements are interleaved with small recalibration blocks.
 
 In conclusion: the beam-monitoring camera is sufficiently sensitive to detect lattice misalignments on the order of a few lattice sites, making it useful as a noninvasive check of the lattice position.
 
